@@ -16,10 +16,12 @@ class InstallTest extends JoomlaWebdriverTestCase
 	 */
 	public function install_NormalInstallFromConfig_ShouldInstall()
 	{
-		$this->deleteConfigurationFile();
-		$url = $this->cfg->host . $this->cfg->path . 'installation/';
-		$installPage = $this->getPageObject('InstallationPage', true, $url);
-		$installPage->install($this->cfg);
+		if ($this->cfg->doInstall) {
+			$this->deleteConfigurationFile();
+			$url = $this->cfg->host . $this->cfg->path . 'installation/';
+			$installPage = $this->getPageObject('InstallationPage', true, $url);
+			$installPage->install($this->cfg);
+		}
 		$cpPage = $this->doAdminLogin();
 		$gcPage = $cpPage->clickMenu('Global Configuration', 'GlobalConfigurationPage');
 		$gcPage->setFieldValue('Cache', 'OFF');
