@@ -26,6 +26,9 @@ $ -> Language fix or change
 - -> Removed
 ! -> Note
 
+16-Aug-2013 Michael Babker
+ ^ Add a conditional for running app install
+
 15-Aug-2013 Mark Dexter
  # Fix failing system tests due to markup changes.
 
